5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1596_1016.log
== TEST (2019-03-28 18:34:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lado1=float(input("lado 1: "))
lado2=float(input("lado 2: "))
lado3=float(input("lado 3: "))
s=(lado1+lado2+lado3)/2
from math import sqrt()
A=sqrt(s*(s-lado1)*(s-lado2)*(s-lado3))
-- ERROR:
File "XXXX", line 8
    from math import sqrt()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:35:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lado1=float(input("lado 1: "))
lado2=float(input("lado 2: "))
lado3=float(input("lado 3: "))
s=(lado1+lado2+lado3)/2
from math import sqrt(A)
A=sqrt(s*(s-lado1)*(s-lado2)*(s-lado3))
-- ERROR:
File "XXXX", line 8
    from math import sqrt(A)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:35:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lado1=float(input("lado 1: "))
lado2=float(input("lado 2: "))
lado3=float(input("lado 3: "))
s=(lado1+lado2+lado3)/2
from math import sqrt
A=sqrt(s*(s-lado1)*(s-lado2)*(s-lado3))
-- ERROR:
File "XXXX", line 8
    from math import sqrt(A)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:37:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lado1=float(input("lado 1: "))
lado2=float(input("lado 2: "))
lado3=float(input("lado 3: "))
s=(lado1+lado2+lado3)/2
from math import sqrt
A=sqrt(s*(s-lado1)*(s-lado2)*(s-lado3))
print(round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:37:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lado1=float(input("lado 1: "))
lado2=float(input("lado 2: "))
lado3=float(input("lado 3: "))
s=(lado1+lado2+lado3)/2
from math import sqrt
A=sqrt(s*(s-lado1)*(s-lado2)*(s-lado3))
print(round(A,5))
-- EXECUTION TIME:
0.141876
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
